--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ apply from: "$rootDir/config/building/apk_name.gradle"
 apply from: "$rootDir/config/documentation/javadoc.gradle"
 apply from: "$rootDir/config/coverage/jacoco.gradle"
 apply from: "$rootDir/config/quality/quality.gradle"
+apply from: "$rootDir/config/signing/signing.gradle"
 
 android {
     compileSdkVersion 25
@@ -61,6 +62,19 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
     }
 }
 
