--- a/config/building/apk_name.gradle
+++ b/config/building/apk_name.gradle
@@ -22,10 +22,14 @@
  * https://code.google.com/p/android/issues/detail?id=212591
  */
 
-android.applicationVariants.all { variant ->
+def renameApkForVariant(variant) {
     // rename output apk based on build variant, version name, and version code
     variant.outputs.each { output ->
         def newApkName = "${output.baseName}-v${variant.versionName}-b${variant.versionCode}.apk"
         output.outputFile = new File(output.outputFile.parent, newApkName)
     }
+}
+
+ext{
+    renameApkForVariant = this.&renameApkForVariant
 }
