--- a/config/documentation/javadoc_application.gradle
+++ b/config/documentation/javadoc_application.gradle
@@ -14,8 +14,8 @@
  * limitations under the License.
  */
 
-include ':presentation-core'
-include ':presentation-mvp'
-include ':presentation-mvvm'
-include ':domain'
-include ':data'
+apply from: "$rootDir/config/documentation/javadoc.gradle"
+
+android.applicationVariants.all { variant ->
+    javadocTaskForVariant(variant)
+}
