--- a/config/quality/quality_android.gradle
+++ b/config/quality/quality_android.gradle
@@ -14,8 +14,19 @@
  * limitations under the License.
  */
 
-apply from: "$rootDir/config/building/apk_name.gradle"
+/**
+ * Checks quality and style of Android code.
+ *
+ * Reference: http://vincentbrison.com/2014/07/19/how-to-improve-quality-and-syntax-of-your-android-code/
+ */
 
-android.applicationVariants.all { variant ->
-    renameApkForVariant(variant)
+android {
+    lintOptions {
+        abortOnError true
+        xmlReport false
+        htmlReport true
+        lintConfig file("$rootDir/config/quality/lint/lint.xml")
+        htmlOutput file("$buildDir/reports/lint/lint-result.html")
+        xmlOutput file("$buildDir/reports/lint/lint-result.xml")
+    }
 }
