--- a/config/documentation/javadoc.gradle
+++ b/config/documentation/javadoc.gradle
@@ -29,7 +29,7 @@ if (JavaVersion.current().isJava8Compatible()) {
 def generateJavadocTask(buildVariant, sourceSets, classpathFiles) {
     task("${buildVariant}JavaDoc", type: Javadoc) {
         group = "Documentation"
-        description = "Generates Javadoc for ${buildVariant}."
+        description = "Generates Javadoc for the ${buildVariant} build variant."
 
         source = sourceSets
         destinationDir = file("$buildDir/docs/javadoc/${buildVariant}")
