--- a/presentation-java-noui/build.gradle
+++ b/presentation-java-noui/build.gradle
@@ -14,21 +14,18 @@
  * limitations under the License.
  */
 
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-    }
+apply plugin: 'application'
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        // FIXME migrate to using Android Studio 2.4 support for lambdas
-        // See https://developer.android.com/studio/preview/features/java8-support.html
-        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
-    }
+dependencies {
+    def presentationJavaDependencies = rootProject.ext.presentationJavaDependencies
+    def presentationJavaTestDependencies = rootProject.ext.presentationJavaTestDependencies
+
+    implementation presentationJavaDependencies.rxJava
+    implementation presentationJavaDependencies.javaxInject
+
+    compileOnly presentationJavaDependencies.javaxAnnotation
+
+    testImplementation presentationJavaTestDependencies.junit
+    testImplementation presentationJavaTestDependencies.assertj
+    testImplementation presentationJavaTestDependencies.mockitoCore
 }
-
-apply plugin: 'me.tatarka.retrolambda'
-
-apply from: "$rootDir/config/dependencies/dependencies.gradle"
