--- a/config/building/utils.gradle
+++ b/config/building/utils.gradle
@@ -17,3 +17,34 @@
 /**
  * Provides utility methods for building.
  */
+
+def resolveSourceDirs(String flavor, String buildType, String buildVariant) {
+    def sourceDirs = [
+            "${projectDir}/src/main/java",
+            "${projectDir}/src/${buildVariant}/java"
+    ]
+
+    if (!buildType.isEmpty()) {
+        sourceDirs += "${projectDir}/src/${buildType}/java";
+        if (!flavor.isEmpty()) {
+            sourceDirs += "${projectDir}/src/${flavor}/java";
+        }
+    }
+
+    return sourceDirs;
+}
+
+def resolveClassesDir(String flavor, String buildType, String buildVariant) {
+    if (!buildType.isEmpty() && !flavor.isEmpty()) {
+        return "${buildDir}/intermediates/classes/${flavor}/${buildType}"
+    } else if (!buildType.isEmpty()) {
+        return "${buildDir}/intermediates/classes/${buildType}"
+    } else {
+        return "${buildDir}/classes/${buildVariant}"
+    }
+}
+
+ext {
+    resolveSourceDirs = this.&resolveSourceDirs
+    resolveClassesDir = this.&resolveClassesDir
+}
